--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <text class="head">Search for Anything</text>
       <div class="upper-side">
-        <input type="text" class="input" />
+        <input type="text" class="input" placeholder="Type anything" />
         <button type="button" class="btn btn-dark">Search</button>
       </div>
       <img alt="" class="image img-fluid" src="hero-bcg.jpeg" />
